--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorPrimary">@color/green_light</color>
+    <color name="colorPrimaryDark">@color/green_dark</color>
     <color name="colorAccent">#D81B60</color>
-    <color name="white">#fff</color>
     <color name="off_white">#FDFBFB</color>
+    <color name="edittext_bg_color">#DBDBDB</color>
+    <color name="green_light">#6FC295</color>
+    <color name="green_dark">#009966</color>
+    <color name="radioSelected">#55C58D</color>
+    <color name="radioUnSelected">#EEE</color>
+    <color name="white">#FFFFFF</color>
+    <color name="yellow">#FFFF00</color>
+    <color name="fuchsia">#FF00FF</color>
+    <color name="red">#FF0000</color>
+    <color name="silver">#C0C0C0</color>
+    <color name="gray">#808080</color>
+    <color name="olive">#808000</color>
+    <color name="purple">#800080</color>
+    <color name="maroon">#800000</color>
+    <color name="aqua">#00FFFF</color>
+    <color name="lime">#00FF00</color>
+    <color name="teal">#008080</color>
+    <color name="green">#008000</color>
+    <color name="blue">#0000FF</color>
+    <color name="navy">#000080</color>
+    <color name="black">#000000</color>
+    <color name="bg_color_1">#7C69A7</color>
+    <color name="bg_color_2">#6EB9E2</color>
+    <color name="profile_divider_color">#111</color>
 </resources>
