--- a/app/src/main/res/layout/recent_transaction.xml
+++ b/app/src/main/res/layout/recent_transaction.xml
@@ -35,30 +35,31 @@
                 android:src="@drawable/ic_arrow_right_black_24dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
+
             <ImageView
-                android:clickable="true"
-                android:background="@drawable/selectable_icon_bg"
-                android:paddingTop="6dp"
-                android:paddingBottom="6dp"
-                android:paddingLeft="8dp"
-                android:paddingRight="8dp"
                 android:id="@+id/recent_sort"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintEnd_toStartOf="@id/recent_viewAll"
-                android:src="@drawable/ic_sort_black_24dp"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:background="@drawable/selectable_icon_bg"
+                android:clickable="true"
+                android:paddingLeft="8dp"
+                android:paddingTop="6dp"
+                android:paddingRight="8dp"
+                android:paddingBottom="6dp"
+                android:src="@drawable/ic_sort_black_24dp"
+                app:layout_constraintEnd_toStartOf="@id/recent_viewAll"
+                app:layout_constraintTop_toTopOf="parent" />
             <ImageView
                 android:clickable="true"
                 android:background="@drawable/selectable_icon_bg"
                 android:id="@+id/recent_refresh"
                 android:paddingTop="6dp"
                 android:paddingBottom="6dp"
+                android:src="@drawable/ic_refresh_black_24dp"
                 android:paddingLeft="8dp"
                 android:paddingRight="8dp"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintEnd_toStartOf="@id/recent_sort"
-                android:src="@drawable/ic_refresh_black_24dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
             <TextView
@@ -88,18 +89,20 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recent_recycler"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/progressBar"
-        app:layout_constraintBottom_toBottomOf="parent"/>
     <LinearLayout
+        android:visibility="gone"
         app:layout_constraintTop_toTopOf="@id/barrier1"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <include layout="@layout/noitem_layout"/>
     </LinearLayout>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recent_recycler"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/progressBar"
+        app:layout_constraintBottom_toBottomOf="parent"/>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
