Added ui and related most of the things

--- a/app/src/main/res/drawable/rounded_top.xml
+++ b/app/src/main/res/drawable/rounded_top.xml
@@ -8,5 +8,6 @@
     android:shape="rectangle">
     <corners android:topLeftRadius="@dimen/default_rounded_radious"
         android:topRightRadius="@dimen/default_rounded_radious"/>
+    <solid android:color="?android:windowBackground"/>
 
 </shape>
