--- a/app/src/main/res/drawable/selectable_icon_bg.xml
+++ b/app/src/main/res/drawable/selectable_icon_bg.xml
@@ -8,7 +8,9 @@
 
         <shape android:shape="rectangle">
             <corners android:radius="50dp"/>
-            <solid android:color="@color/green_light"/>
+            <solid android:color="?colorAccent"/>
         </shape>
     </item>
+
+
 </selector>
