--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -6,7 +6,7 @@
     android:background="@drawable/gradient"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".profile.Profile">
+    tools:context=".activity.profile.Profile">
     <com.google.android.material.appbar.AppBarLayout
         android:background="@android:color/transparent"
         android:layout_width="match_parent"
@@ -55,6 +55,7 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+
             <LinearLayout
                 android:background="#F3F1F1"
                 android:paddingVertical="10dp"
@@ -62,6 +63,58 @@
                 android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+                    <androidx.constraintlayout.widget.Barrier
+                        android:id="@+id/guideline"
+                        app:constraint_referenced_ids="user_name_hint,name_hint"
+                        app:barrierDirection="right"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"/>
+                    <TextView
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="@id/profile_user_name"
+                        app:layout_constraintBottom_toBottomOf="@id/profile_user_name"
+                        android:id="@+id/user_name_hint"
+                        android:padding="6dp"
+                        android:gravity="center_vertical"
+                        android:text="User Name"
+                        android:layout_width="wrap_content"
+                        android:layout_height="0dp"/>
+                    <EditText
+                        app:layout_constraintStart_toStartOf="@id/guideline"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        android:id="@+id/profile_user_name"
+                        android:singleLine="true"
+                        android:hint="User Name"
+                        android:padding="@dimen/custom_edittext_padding"
+                        android:background="@drawable/rounded_border"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"/>
+
+                    <TextView
+                        android:id="@+id/name_hint"
+                        app:layout_constraintTop_toTopOf="@id/profile_name"
+                        app:layout_constraintBottom_toBottomOf="@id/profile_name"
+                        app:layout_constraintStart_toStartOf="parent"
+                        android:padding="6dp"
+                        android:text="Name"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+                    <EditText
+                        android:layout_marginTop="6dp"
+                        app:layout_constraintStart_toEndOf="@id/guideline"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/profile_user_name"
+                        android:id="@+id/profile_name"
+                        android:singleLine="true"
+                        android:hint="Name"
+                        android:padding="@dimen/custom_edittext_padding"
+                        android:background="@drawable/rounded_border"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"/>
+                </androidx.constraintlayout.widget.ConstraintLayout>
                 <ImageView
                     android:padding="6dp"
                     android:clickable="true"
@@ -78,34 +131,8 @@
                     android:id="@+id/user_typeSpinner"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
-                <TextView
-                    android:padding="6dp"
-                    android:text="User Name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
-                <EditText
-                    android:id="@+id/profile_user_name"
-                    android:singleLine="true"
-                    android:hint="User Name"
 
-                    android:padding="@dimen/custom_edittext_padding"
-                    android:background="@drawable/rounded_border"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
-                <TextView
-                    android:padding="6dp"
-                    android:text="Name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
-                <EditText
-                    android:id="@+id/profile_name"
-                    android:singleLine="true"
-                    android:hint="Name"
 
-                    android:padding="@dimen/custom_edittext_padding"
-                    android:background="@drawable/rounded_border"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
                 <TextView
                     android:padding="6dp"
                     android:text="Mobile"
