--- a/app/src/main/res/layout/dashboard_cardview_layout.xml
+++ b/app/src/main/res/layout/dashboard_cardview_layout.xml
@@ -4,8 +4,10 @@
   -->
 
 
-<androidx.constraintlayout.widget.ConstraintLayout
+<RelativeLayout
+    android:layout_marginTop="?attr/actionBarSize"
     android:layout_marginBottom="15dp"
+    android:paddingTop="15dp"
     android:layout_gravity="bottom"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -14,16 +16,11 @@
     <androidx.cardview.widget.CardView
         app:cardCornerRadius="@dimen/dashboaritem_corner"
         android:id="@+id/card1"
-        android:layout_marginLeft="6dp"
-        android:layout_marginRight="6dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintDimensionRatio="@string/card_ratio"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/card2"
-        app:cardBackgroundColor="@color/green"
-        android:layout_width="0dp"
-        android:layout_height="0dp">
+        app:cardElevation="4dp"
+        android:layout_centerHorizontal="true"
+        app:cardBackgroundColor="?colorPrimaryDark"
+        android:layout_width="@dimen/dash_board_circledime"
+        android:layout_height="@dimen/dash_board_circledime">
         <LinearLayout
             android:gravity="center"
             android:orientation="vertical"
@@ -33,7 +30,7 @@
                 android:textStyle="bold"
                 android:textColor="@color/white"
                 android:paddingVertical="2dp"
-                android:text="Income"
+                android:text="Balance"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
             <TextView
@@ -46,19 +43,34 @@
                 android:layout_height="wrap_content"/>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
+    <ProgressBar
+        android:elevation="5dp"
+        android:layout_alignEnd="@id/card1"
+        android:layout_alignStart="@id/card1"
+        android:layout_alignTop="@id/card1"
+        android:layout_alignBottom="@id/card1"
+        android:layout_marginTop="-1dp"
+        android:layout_marginLeft="-1dp"
+        android:layout_marginRight="-1dp"
+        android:layout_marginBottom="-1dp"
+        android:rotation="-90"
+        android:max="100"
+        android:progress="60"
+        style="?android:progressBarStyleHorizontal"
+        android:progressDrawable="@drawable/progress_background"
+        android:layout_gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
     <androidx.cardview.widget.CardView
         app:cardCornerRadius="@dimen/dashboaritem_corner"
         android:id="@+id/card2"
-        android:layout_marginLeft="6dp"
-        android:layout_marginRight="6dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintDimensionRatio="@string/card_ratio"
-        app:layout_constraintStart_toEndOf="@id/card1"
-        app:layout_constraintEnd_toStartOf="@id/card3"
-        app:cardBackgroundColor="@color/colorAccent"
-        android:layout_width="0dp"
-        android:layout_height="0dp">
+        app:cardElevation="4dp"
+        android:layout_below="@id/card1"
+        android:layout_marginTop="-40dp"
+        android:layout_toLeftOf="@id/card1"
+        app:cardBackgroundColor="?colorAccent"
+        android:layout_width="@dimen/dash_board_circledime"
+        android:layout_height="@dimen/dash_board_circledime">
         <LinearLayout
             android:gravity="center"
             android:orientation="vertical"
@@ -67,7 +79,7 @@
             <TextView
                 android:textColor="@color/white"
                 android:paddingVertical="2dp"
-                android:text="Expense"
+                android:text="Income"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
             <TextView
@@ -84,16 +96,13 @@
     <androidx.cardview.widget.CardView
         app:cardCornerRadius="@dimen/dashboaritem_corner"
         android:id="@+id/card3"
-        android:layout_marginLeft="6dp"
-        android:layout_marginRight="6dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintDimensionRatio="@string/card_ratio"
-        app:layout_constraintStart_toEndOf="@id/card2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:cardBackgroundColor="@color/bg_color_1"
-        android:layout_width="0dp"
-        android:layout_height="0dp">
+        app:cardElevation="4dp"
+        android:layout_marginTop="-40dp"
+        android:layout_below="@id/card1"
+        android:layout_toRightOf="@id/card1"
+        app:cardBackgroundColor="?colorAccent"
+        android:layout_width="@dimen/dash_board_circledime"
+        android:layout_height="@dimen/dash_board_circledime">
         <LinearLayout
             android:gravity="center"
             android:orientation="vertical"
@@ -102,7 +111,7 @@
             <TextView
                 android:textColor="@color/white"
                 android:paddingVertical="2dp"
-                android:text="Balance"
+                android:text="Expense"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
             <TextView
@@ -116,4 +125,6 @@
                 android:layout_height="wrap_content"/>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+
+</RelativeLayout>
