--- a/app/src/main/res/layout/navigationdrawer_layout.xml
+++ b/app/src/main/res/layout/navigationdrawer_layout.xml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--
-  ~ Copyright (c) 2020. This code is created and written by Ariful Jannat Arif on 2/28/20 9:11 AM
-  -->
-
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<!-- ~ Copyright (c) 2020. This code is created and written by
+     Ariful Jannat Arif on 2/28/20 9:11 AM
+-->
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:background="@color/off_white"
+    android:background="?colorPrimary"
     android:layout_height="match_parent">
     <RelativeLayout
-        android:background="@color/colorPrimary"
         android:layout_width="match_parent"
         android:layout_height="250dp">
         <com.example.circleimageview.CircleImageView
@@ -65,8 +64,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
     </RelativeLayout>
+
     <ListView
         android:id="@+id/drawer_listview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent" />
 </LinearLayout>
