--- a/app/src/main/res/layout/recent_transaction.xml
+++ b/app/src/main/res/layout/recent_transaction.xml
@@ -3,7 +3,7 @@
   ~ Copyright (c) 2020. This code is created and written by Ariful Jannat Arif on 3/1/20 8:53 AM
   -->
 
-<androidx.constraintlayout.widget.ConstraintLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -13,55 +13,31 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <androidx.cardview.widget.CardView
-        app:cardBackgroundColor="@color/off_white"
         app:layout_constraintTop_toTopOf="parent"
         android:id="@+id/cardtop"
+        app:cardElevation="3dp"
         android:background="@drawable/rounded_top"
+        android:backgroundTint="?android:windowBackground"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/top_bar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-            <ImageView
-                android:paddingTop="6dp"
-                android:paddingBottom="6dp"
-                android:paddingLeft="8dp"
-                android:paddingRight="8dp"
-                android:clickable="true"
-                android:background="@drawable/selectable_icon_bg"
-                android:id="@+id/recent_viewAll"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:src="@drawable/ic_arrow_right_black_24dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-
             <ImageView
                 android:id="@+id/recent_sort"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@drawable/selectable_icon_bg"
+                android:tint="?attr/colorControlNormal"
                 android:clickable="true"
                 android:paddingLeft="8dp"
                 android:paddingTop="6dp"
                 android:paddingRight="8dp"
                 android:paddingBottom="6dp"
                 android:src="@drawable/ic_sort_black_24dp"
-                app:layout_constraintEnd_toStartOf="@id/recent_viewAll"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
-            <ImageView
-                android:clickable="true"
-                android:background="@drawable/selectable_icon_bg"
-                android:id="@+id/recent_refresh"
-                android:paddingTop="6dp"
-                android:paddingBottom="6dp"
-                android:src="@drawable/ic_refresh_black_24dp"
-                android:paddingLeft="8dp"
-                android:paddingRight="8dp"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintEnd_toStartOf="@id/recent_sort"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
             <TextView
                 android:paddingVertical="8dp"
                 android:paddingHorizontal="10dp"
@@ -71,8 +47,59 @@
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
+            <androidx.appcompat.widget.SearchView
+                android:focusedByDefault="false"
+                android:background="@drawable/searchview_bg"
+                android:tint="?attr/colorControlNormal"
+                android:id="@+id/recent_refresh"
+                android:layout_marginRight="8dp"
+                android:layout_marginBottom="5dp"
+                app:layout_constraintTop_toTopOf="@id/recent_sort"
+                app:layout_constraintBottom_toBottomOf="@id/recent_sort"
+                app:layout_constraintEnd_toStartOf="@id/recent_sort"
+                app:iconifiedByDefault="false"
+                android:layout_width="150dp"
+                android:layout_height="0dp"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
+
+    <com.google.android.material.chip.ChipGroup
+        android:layout_height="wrap_content"
+        app:singleSelection="true"
+        android:layout_width="match_parent">
+        <com.google.android.material.chip.Chip
+            android:singleLine="true"
+            android:textSize="18dp"
+            android:paddingHorizontal="8dp"
+            app:chipIconVisible="true"
+            android:checkable="true"
+            app:chipCornerRadius="10dp"
+            android:text="All"
+            style="@style/Widget.MaterialComponents.Chip.Filter"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+        <com.google.android.material.chip.Chip
+            android:singleLine="true"
+            android:textSize="18dp"
+            android:paddingHorizontal="8dp"
+            app:chipCornerRadius="10dp"
+            android:checkable="true"
+            style="@style/Widget.MaterialComponents.Chip.Filter"
+            android:text="Income"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+        <com.google.android.material.chip.Chip
+            android:singleLine="true"
+            android:textSize="18dp"
+            android:paddingHorizontal="8dp"
+            android:checkable="true"
+            app:chipIconVisible="true"
+            app:chipCornerRadius="10dp"
+            android:text="Expense"
+            style="@style/Widget.MaterialComponents.Chip.Filter"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+    </com.google.android.material.chip.ChipGroup>
     <androidx.constraintlayout.widget.Barrier
         android:id="@+id/barrier1"
         app:barrierDirection="bottom"
@@ -100,9 +127,9 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recent_recycler"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="match_parent"
         app:layout_constraintTop_toBottomOf="@id/progressBar"
         app:layout_constraintBottom_toBottomOf="parent"/>
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
